--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cordova ESLint Config",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ."
   },
   "keywords": [
     "cordova",
