--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-cordova",
-  "version": "1.0.0",
+  "version": "2.0.0-dev",
   "description": "Cordova ESLint Config",
   "main": "index.js",
   "scripts": {
