--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-config-cordova",
+  "name": "@cordova/eslint-config",
   "version": "1.0.0",
   "description": "Cordova ESLint Config",
   "main": "index.js",
