--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
+  },
+  "engines": {
+    "node": ">= 6"
   }
 }
